# Global-redteam

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  ai_vulnerability_discovery.py  config.json.example  database.py  docker-compose.yml  framework_improvements.md  meta_redteam.py  pyproject.toml  pytest.ini  red-team.md  red_team_api_tester.py  red_team_fuzzer (2).py  red_team_fuzzer.py  red_team_orchestrator (1).py  red_team_orchestrator.py  red_team_property_testing.py  red_team_race_detector.py  red_team_report.html  requirements.txt  secure_database.py
.github/workflows/: ci.yml  codeql.yml  red_team_scan.yml
deliverables/: cicd_automation_architecture.md  executive_summary.md  internal_tool_mvp_proposal.md  ir_playbook.md  pentest_report_template.md  red_team_checklist.md  security_roadmap.md  threat_model.md
docs/redteam_research/: red-team-playbook-json.json  red-team.md  redteam-research-roadmap.txt  redteam_dataset.json
redsight_mvp/: README.md  docker-compose.yml
redsight_mvp/api/: Dockerfile  algorithms.py  celery.py  celery_app.py  database.py  main.py  openapi.yaml  requirements.txt  worker.Dockerfile
redsight_mvp/ci/: re_test_finding.yml
tests/: test_ai_vulnerability_discovery.py  test_database.py  test_fuzzer.py  test_idor_scanner.py  test_integration.py  test_orchestrator.py  test_property_testing.py  test_rate_limiter.py  test_sast_integration.py  test_threat_intelligence.py
tools/: meta_redteam.py
ui/: RedTeam.jsx  package.json  proxy_server.py
vulnerable_app/: Dockerfile  app.py  models.py  setup.py
(+68 files in other folders)
