[tool.poetry]
name = "redteam"
version = "0.1.0"
description = ""
authors = ["Jules <<<your-email@example.com>>>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
requests = "^2.0.0"
PyJWT = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.test.dependencies]
flask = "^3.0.0"
flask_sqlalchemy = "^3.0.0"
vulnerable_app = {path = "vulnerable_app", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
